kubernetes/argocd/main-cluster/manifests/pig-ebank/pig-ebank.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pig-ebank
  namespace: pig-ebank
  labels:
    app: pig-ebank
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pig-ebank
  template:
    metadata:
      labels:
        app: pig-ebank
    spec:
      imagePullSecrets:
        - name: pig-ebank-ghcr-credentials
      containers:
      - name: pig-ebank
        image: ghcr.io/marklester/pig-ebank:main
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 8080
          protocol: TCP
        volumeMounts:
          - name: pig-ebank-storage
            mountPath: /data
      volumes:
        - name: pig-ebank-storage
          persistentVolumeClaim:
            claimName: pig-ebank-storage
