kubernetes/argocd/main-cluster/manifests/pig-ebank/pig-ebank.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pig-ebank
  namespace: pig-ebank
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
spec:
  ingressClassName: traefik
  rules:
  - host: pig-ebank.home
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: pig-ebank
            port:
              number: 80
